# tauri-serial

./: .gitignore  README.md  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.vue  main.ts  styles.css  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/serial/: init.rs  mod.rs  static_value.rs  types.rs
src-tauri/src/tauri_command/: command.rs
src/components/: AutoSend.vue  SerialControl.vue  SerialInput.vue  SerialOutput.vue  SerialSider.vue
src/plugins/: index.ts
src/plugins/elementplus/: index.ts
src/plugins/pinia/: index.ts
src/plugins/tailwindcss/: index.ts
src/router/: index.ts  routes.ts
src/store/: useOutputStore.ts
src/stores/: bytes.ts  data.ts  encoding.ts  index.ts  scroll.ts
src/types/: event-data.ts  serial-info.ts  settings-data.ts  write-data.ts
src/utils/: time.ts
vite/: alias.ts
vite/plugins/: auto-import.ts  index.ts
