[package]
authors = ["codegongbing"]
description = "使用tauri构建的串口调试工具"
edition = "2021"
license = ""
name = "tauri-serial"
repository = ""
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.3", features = []}

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.3", features = ["shell-open"]}


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
